# semantic-image-search

./: .gitignore  MANIFEST.in  get_lib_versions.py  pyproject.toml  requirements.txt
semantic_image_search/backend/: config.py  query_translator.py
semantic_image_search/notebooks/: experiments.ipynb
semantic_image_search/ui/: app.py
